# YoctoConfRPi

./: LICENSE  Makefile  README.md  bblayers.conf  build-oe-yocto.sh  local.conf
AppsFrontend/Boost-1.78.0/Asio/Chat_Client/: CMakeLists.txt  compile.sh
AppsFrontend/Boost-1.78.0/Asio/Chat_Server/: CMakeLists.txt
AppsFrontend/Camera/: gst.sh
AppsFrontend/Camera/opencv_video0/: CMakeLists.txt  camera.cpp  camera.h  cameraOld.cpp  main.cpp  main1.cpp  main2.cpp
AppsFrontend/GPS/: .gitignore  CMakeLists.txt  compile.sh  main.cpp  main_buggy.cpp
AppsFrontend/Grafik/: cross.sh
AppsFrontend/RTOS/: CMakeLists.txt  compile.sh  main.cpp
meta-godot/conf/: layer.conf
meta-godot/recipes-godot/godot/: godot.bb
meta-lvgl-demo/conf/: layer.conf
meta-lvgl-demo/image-recipe/images/: phytec-lvgldemo-image.bb
meta-lvgl-demo/recipes-graphics/lvgl/: lvgl-demo-fb_git.bb  lvgl-demo-sdl2_git.bb
meta-lvgl-demo/recipes-graphics/lvgl/lvgl-demo-fb/: lvgl-demo-fb.service
meta-lvgl-demo/recipes-graphics/lvgl/lvgl-demo-sdl2/: lvgl-demo-sdl2.service
meta-mydistro/conf/distro/: wfdistro.conf
meta-mydistro/recipes-kernel/linux/: linux-raspberrypi_%.bbappend  linux-raspberrypi_5.15.%.bbappend  linux-raspberrypi_5.15.bbappend
meta-mydistro/recipes-kernel/linux/linux-raspberrypi/: interfaces.cfg
meta-mydistro/recipesBugy-graphics/cameras/: libjpeg_git.bbfalse  meson_0.64.0rc2.bbolded  meson_1.3.1.bb  rpicam-apps_git.bb
meta-mydistro/recipesBugy-graphics/cameras/rpicam-apps_git/: 001-fix-depandancies-in-meson.patch
meta-mylayer/recipes-bordsupportpack/linux/: linux-raspberrypi_5.15.bbappend
meta-mylayer/recipes-images/test/: build-raspi_0.1.bb  raspi_0.1.bb
meta-mylayer/recipes-kernel/linux/: linux-raspberrypi_5.15.bbappend
meta-mylayer/recipes-media/gui/: camera_0.1.bb  display_0.1.bb
meta-mylayer/recipes-media/net/: can_0.1.bb  gps_0.1.bb  update_0.1.bb
meta-mylayer/recipes-system/debugging/: debugging_0.1.bb
meta-mylayer/recipes-system/initing/: initing_0.1.bb
